# retail-stockout-early-warning

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-frontend.yml
backend/: README.md
backend/app/: __init__.py  db.py  main.py  schemas.py
config/: project.yaml
dashboard/: app.py  data_utils.py  rag.py  ui.py
dashboard/pages/: 1_Data_Stats.py  2_Model_Results.py  3_RAG_Explainer.py
data/anonymized_10_store_dataset/: README.md  products.csv  promotions.csv  replenishment_logs.csv  stockout_events.csv  store_layout.csv  stores.csv  suppliers.csv
db/: README.md  export_processed_for_postgres.py  indexes.sql  load_postgres.sh  schema.sql
docs/: project_book_short.md  project_explanation.md  rag_calculation_guide.md  work_summary.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/assistant/: AiAssistantMessage.tsx  AiAssistantPanel.tsx  AiAssistantProvider.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/overview/: HeroSection.tsx  HowItWorks.tsx  ProductPreview.tsx
frontend/src/components/predictions/: PredictionSummaryCard.tsx  RiskDriversList.tsx  ScenarioSimulator.tsx  (+1 more)
frontend/src/lib/: utils.ts
frontend/src/pages/: DashboardPage.tsx  NotFoundPage.tsx  OverviewPage.tsx  PredictionsPage.tsx  ResultsPage.tsx
scripts/: export_anonymized_10_store_dataset.py
src/stockout_ews/: __init__.py  actions.py  config.py  db.py  db_features.py  explain.py  features.py  modeling.py  pipeline.py
(+19 files in other folders)
