[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-stockout-early-warning"
version = "0.1.0"
description = "Retail stockout early-warning and decision-support project"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
